--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <section class="main-container">
     <div class="advice-box">
       <div class="text-box">
-        <span class="advice-number">ADVICE #117</span>
+        <div class="number">
+          <p>ADVICE #<span class="advice-number">1</span></p>
+        </div>
         <div class="quotes-box">
           <p class="quotes">
             The future belongs to those who believe in the beauty of their
