dice-shaking-upload

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <section class="main-container">
     <div class="advice-box">
       <div class="text-box">
-        <div class="number">
-          <p>ADVICE #<span class="advice-number">1</span></p>
-        </div>
+        <p class="number">ADVICE #<span class="advice-number">1</span></p>
         <div class="quotes-box">
           <p class="quotes">
             The future belongs to those who believe in the beauty of their
